--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,18 +1,24 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
 {% block content %}
-    <form method="POST">
-    <h3 align="center">Sign in</h3>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+
+<div class="d-flex align-items-center py-4 bg-body-tertiary">
+<main class="form-signin w-100 m-auto">
+  <form method="POST">
+    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+    <div class="form-floating">
+      <input type="email" class="form-control top" id="email" name="email" placeholder="name@example.com">
+      <label for="email">Email address</label>
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password"/>
+    <div class="form-floating mb-2">
+      <input type="password" class="form-control bot" id="password" name="password" placeholder="Password">
+      <label for="password">Password</label>
     </div>
-    <br>
-    <button type="submit" class="btn btn-primary">Login
-    </button>
-</form>
+    <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+    <p class="mt-5 mb-3 text-body-secondary">© 2023–2023</p>
+  </form>
+</main>
+
+</div>
 {% endblock %}
