--- a/website/templates/sign-up.html
+++ b/website/templates/sign-up.html
@@ -1,30 +1,37 @@
 {% extends "base.html" %}
 {% block title %}Sign-up{% endblock %}
 {% block content %}
-<form method="POST">
-    <h3 align="center">Sign up</h3>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+
+
+<div class="d-flex align-items-center py-4 bg-body-tertiary">
+<main class="form-signin w-100 m-auto">
+  <form method="POST">
+    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+    <div class="form-floating">
+      <input type="email" class="form-control top" id="email" name="email" placeholder="name@example.com">
+      <label for="email">Email address</label>
     </div>
-    <div class="form-group">
-        <label for="firstname">First Name</label>
-        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter First Name"/>
+    <div class="form-floating">
+      <input type="text" class="form-control top bot" id="firstName" name="firstName" placeholder="Joe Dart">
+      <label for="firstName">First Name</label>
     </div>
-    <div class="form-group">
-        <label for="band">Band</label>
-        <input type="text" class="form-control" id="band" name="band" placeholder="Enter Band Name"/>
+    <div class="form-floating mb-2">
+      <input type="text" class="form-control bot" id="band" name="band" placeholder="Flaming Assholes">
+      <label for="band">Band Name</label>
     </div>
-    <div class="form-group">
-        <label for="password1">Password</label>
-        <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter Password"/>
+    <div class="form-floating">
+      <input type="password" class="form-control top" id="password1" name="password1" placeholder="Password">
+      <label for="password1">Password</label>
     </div>
-    <div class="form-group">
-        <label for="password2">Confirm</label>
-        <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm Password"/>
+    <div class="form-floating mb-2">
+      <input type="password" class="form-control bot" id="password2" name="password2" placeholder="Confirm Password">
+      <label for="password2">Confirm Password</label>
     </div>
-    <br>
-    <button type="submit" class="btn btn-primary">Submit
-    </button>
-</form>
+    <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+    <p class="mt-5 mb-3 text-body-secondary">© 2023–2023</p>
+  </form>
+</main>
+
+</div>
 {% endblock %}
