--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -52,6 +52,8 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/add-new-band">Add new band</a></li>
             <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="/delete-band">Delete band</a></li>
+              <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/logout">Sign out</a></li>
           </ul>
             {% else %}
